glance: Updating glance
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/roles/glanceserver/handlers/main.yml
+++ b/roles/glanceserver/handlers/main.yml
@@ -1,7 +1,2 @@
-
-- name: restart glance-services
-  service: name={{ item }} state=restarted
-  with_items:
-    - glance-registry
-    - glance-api
-
+- name: restart glance-api
+  service: name=glance-api state=restarted
