--- a/roles/novaserver/tasks/main.yml
+++ b/roles/novaserver/tasks/main.yml
@@ -1,49 +1,135 @@
 - name: ensure nova packages are installed
   apt: name={{ item }}
-  with_items:
+  loop:
     - nova-api
-    - nova-cert
     - nova-conductor
-    - nova-consoleauth
     - nova-scheduler
-    - python-novaclient
-    - nova-consoleproxy
     - nova-novncproxy
 
-- name: register internal IP
-  shell: "ip a show dev {{ int_net_nic }}|grep inet|grep -v inet6|awk '{print $2}'|cut -d/ -f1"
-  register: internal_ip_address
-  
-- name: ensure nova sqlite is deleted
-  file: dest=/var/lib/nova/nova.sqlite state=absent
-    
-- name: ensure nova.conf file is present
-  template: >
-    src=etc/nova/nova.conf
-    dest=/etc/nova/nova.conf
-    owner=nova
-    group=nova
-    mode=0660
+- name: ensure nova_api database connections is configured
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: api_database
+    option: connection
+    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ controller_ip }}/nova_api
   notify: 
   - restart nova-services
 
-- name: ensure default nova-consoleproxy file is present
-  template: >
-    src=etc/default/nova-consoleproxy
-    dest=/etc/default/nova-consoleproxy
-    owner=root
-    group=root
-    mode=0644
+- name: ensure nova database connections is configured
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: database
+    option: connection
+    value: mysql+pymysql://nova:{{ nova_db_password }}@{{ controller_ip }}/nova
   notify: 
   - restart nova-services
 
-- name: ensure nova_api db is initialized
+- name: set default section options
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "transport_url",
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller_ip }}:5672/'}
+    - { option: "my_ip", value: '{{ controller_ip }}' }
+    - { option: "use_neutron", value: true }
+    - { option: "firewall_driver", value: nova.virt.firewall.NoopFirewallDriver }
+  notify: 
+  - restart nova-services
+
+- name: configure keystone_authtoken section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: keystone_authtoken
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "www_authenticate_uri", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "memcached_servers", value: '{{ controller_fqdn }}:11211' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: nova}
+    - { option: "password", value: "{{ nova_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
+  notify: 
+  - restart nova-services
+
+- name: ensure auth_strategy is set to keystone
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: api
+    option: auth_strategy
+    value: keystone
+  notify:
+  - restart nova-services
+
+- name: configure vnc section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: vnc
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enabled", value: true }
+    - { option: "server_listen", value: '$my_ip' }
+    - { option: "server_proxyclient_address", value: '$my_ip' }
+  notify:
+  - restart nova-services
+
+- name: configure glance section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: glance
+    option: api_servers
+    value: 'http://{{ controller_ip }}:9292'
+  notify:
+  - restart nova-services
+
+- name: configure oslo_concurrency section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: oslo_concurrency
+    option: lock_path
+    value: /var/lib/nova/tmp
+  notify:
+  - restart nova-services
+
+- name: configure placement section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: placement
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: placement}
+    - { option: "password", value: "{{ placement_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
+  notify: 
+  - restart nova-services
+
+- name: populate nova-api db
   command: /usr/bin/nova-manage api_db sync
-  notify: 
-  - restart nova-services
 
-- name: ensure nova db is initialized
+- name: register the cell0 db
+  command: /usr/bin/nova-manage cell_v2 map_cell0
+
+# Errors ignored for idempotency
+- name: create the cell1
+  command: /usr/bin/nova-manage cell_v2 create_cell --name=cell1
+  ignore_errors: True
+
+- name: populate nova db
   command: /usr/bin/nova-manage db sync
-  notify: 
-  - restart nova-services
 
