--- a/site.yml
+++ b/site.yml
@@ -37,9 +37,10 @@
   roles: 
     - role: placement
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: novaserver
+- hosts: controller-nodes
+  gather_facts: no
+  roles:
+    - role: novaserver
 #     - role: nova_init
 
 
