--- a/roles/keystone_population/tasks/main.yml
+++ b/roles/keystone_population/tasks/main.yml
@@ -64,6 +64,22 @@
   environment: '{{k3}}'
   command: openstack role add --project service --user glance admin
   
+# Placement
+- name: verify if placement user has been created
+  environment: '{{k3}}'
+  command: /usr/bin/openstack user show placement
+  register: result
+  ignore_errors: True
+
+- name: ensure placement user is created
+  environment: '{{k3}}'
+  command: /usr/bin/openstack user create --domain default placement --password {{ placement_identity_password }}
+  when: result is failed
+
+- name: ensure admin role is added to placement user
+  environment: '{{k3}}'
+  command: openstack role add --project service --user placement admin
+  
 # Nova
 - name: verify if nova user has been created
   environment: '{{k3}}'
