set controller's IP from inventory instead of group vars
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -36,7 +36,7 @@
     host: "{{ item }}"
     password: "{{ root_db_password }}"
   loop:
-    - "{{ controller_ip }}"
+    - "{{ internal_ip }}"
     - "localhost"
     - 127.0.0.1
 
