--- a/roles/novacompute/tasks/main.yml
+++ b/roles/novacompute/tasks/main.yml
@@ -5,32 +5,105 @@
 
 - name: ensure nova-compute-kvm is installed when hw accel is enabled
   apt: name=nova-compute-kvm 
-  when: result|success
+  when: result is success
 
 - name: ensure nova-compute-qemu is installed when hw accel is not enabled
   apt: name=nova-compute-qemu 
-  when: result|failed
+  when: result is failed
 
-# - name: ensure python-guestfs and sysfsutils are installed
-#   apt: name={{item}}  
-#   with_items:
-#     - python-guestfs
-#     - sysfsutils
-  
-- name: ensure nova sqlite is deleted
-  file: dest=/var/lib/nova/nova.sqlite state=absent
+- name: set default section options
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "transport_url",
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ hostvars["controller"]["internal_ip"] }}:5672/'}
+    - { option: "my_ip", value: "{{ internal_ip }}" }
+    - { option: "use_neutron", value: true }
+    - { option: "firewall_driver", value: nova.virt.firewall.NoopFirewallDriver }
+  notify: 
+  - restart nova-compute
 
-- name: register internal IP
-  shell: "ip a show dev {{ int_net_nic }}|grep inet|grep -v inet6|awk '{print $2}'|cut -d/ -f1"
-  register: internal_ip_address
-      
-- name: ensure nova.conf file is present
-  template: >
-    src=../../novaserver/templates/etc/nova/nova.conf
-    dest=/etc/nova/nova.conf
-    owner=nova
-    group=nova
-    mode=0660
+- name: configure keystone_authtoken section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: keystone_authtoken
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "www_authenticate_uri", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "memcached_servers", value: '{{ controller_fqdn }}:11211' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: nova}
+    - { option: "password", value: "{{ nova_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
+  notify: 
+  - restart nova-compute
+
+- name: ensure auth_strategy is set to keystone
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: api
+    option: auth_strategy
+    value: keystone
+  notify:
+  - restart nova-compute
+
+- name: configure vnc section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: vnc
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enabled", value: true }
+    - { option: "server_listen", value: '$my_ip' }
+    - { option: "server_proxyclient_address", value: '$my_ip' }
+    - { option: "novncproxy_base_url", value:  'http://{{ controller_fqdn }}:6080/vnc_auto.html' }
+  notify:
+  - restart nova-compute
+
+- name: configure glance section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: glance
+    option: api_servers
+    value: 'http://{{ hostvars["controller"]["internal_ip"] }}:9292'
+  notify:
+  - restart nova-compute
+
+- name: configure oslo_concurrency section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: oslo_concurrency
+    option: lock_path
+    value: /var/lib/nova/tmp
+  notify:
+  - restart nova-compute
+
+- name: configure placement section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: placement
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: placement}
+    - { option: "password", value: "{{ placement_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
   notify: 
   - restart nova-compute
 
