site.yml: add novacompute
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/site.yml
+++ b/site.yml
@@ -36,18 +36,12 @@
   gather_facts: no
   roles: 
     - role: placement
+    - role: novaserver
 
-- hosts: controller-nodes
+- hosts: compute-nodes
   gather_facts: no
   roles:
-    - role: novaserver
-#     - role: nova_init
-
-
-# - hosts: compute-nodes
-#   roles:
-#     - role: novacompute
-
+    - role: novacompute
 
 # - hosts: controller-nodes
 #   roles:
