--- a/roles/neutronserver/tasks/main.yml
+++ b/roles/neutronserver/tasks/main.yml
@@ -1,32 +1,197 @@
 - name: ensure neutron server and neutron-plugin-ml2 are installed
   apt: name={{ item }}
-  with_items:
+  loop:
     - neutron-server
-    - neutron-common
-    - python-neutronclient
-    - neutron-lbaas-common
+    - neutron-plugin-ml2
+    - neutron-linuxbridge-agent
+    - neutron-l3-agent
+    - neutron-dhcp-agent
+    - neutron-metadata-agent
 
-- name: ensure neutron.conf is configured
-  template: >
-    src=etc/neutron/neutron.conf
-    dest=/etc/neutron/neutron.conf
-    owner=neutron group=neutron mode=0660
-  notify:
-    - restart neutron-server
+- name: ensure neutron database connections is configured
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: database
+    option: connection
+    value: mysql+pymysql://neutron:{{ neutron_db_password }}@{{ internal_ip }}/neutron
+  notify: 
+  - restart neutron-services
 
-- name: ensure ml2 plugin is configured
-  template: >
-    src=etc/neutron/plugins/ml2/ml2_conf.ini
-    dest=/etc/neutron/plugins/ml2/ml2_conf.ini
-    owner=root group=root mode=0644
+- name: set default section options
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "transport_url",
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
+    - { option: "core_plugin", value: ml2 }
+    - { option: "service_plugins", value: router }
+    - { option: "allow_overlapping_ips", value: true }
+    - { option: "notify_nova_on_port_status_changes", value: true }
+    - { option: "notify_nova_on_port_data_changes", value: true }
+    - { option: "auth_strategy", value: keystone }
+  notify: 
+  - restart neutron-services
+
+- name: configure keystone_authtoken section
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: keystone_authtoken
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "www_authenticate_uri", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "memcached_servers", value: '{{ controller_fqdn }}:11211' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: neutron}
+    - { option: "password", value: "{{ neutron_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
+  notify: 
+  - restart neutron-services
+
+- name: configure oslo_concurrency section
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: oslo_concurrency
+    option: lock_path
+    value: /var/lib/neutron/tmp
   notify:
-    - restart neutron-server
+  - restart neutron-services
+
+- name: configure nova section
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: nova
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: nova}
+    - { option: "password", value: "{{ nova_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }    
+  notify: 
+  - restart neutron-services
+
+- name: configure ml2 plugin
+  ini_file:
+    path: /etc/neutron/plugins/ml2/ml2_conf.ini
+    section: ml2
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "type_drivers", value: "flat,vlan,vxlan" }
+    - { option: "tenant_network_types", value: vxlan }
+    - { option: "mechanism_drivers", value: "linuxbridge,l2population" }
+    - { option: "extension_drivers", value: port_security }
+    - { option: "flat_networks", value: provider }
+    - { option: "vni_ranges", value: '1:1000' }
+    - { option: "enable_ipset", value: true }
+  notify:
+  - restart neutron-services
+
+- name: register the interface name associated to the external_ip
+  shell: ip -o a|grep {{ external_ip }}|awk '{print $2}'
+  register: external_interface
+  
+- name: configure the Linux bridge agent. linux_bridge section
+  ini_file:
+    path: /etc/neutron/plugins/ml2/linuxbridge_agent.ini 
+    section: linux_bridge
+    option: "physical_interface_mappings"
+    value: "provider:{{ external_interface.stdout }}"
+  notify:
+  - restart neutron-services
+    
+- name: configure the Linux bridge agent. vxlan section
+  ini_file:
+    path: /etc/neutron/plugins/ml2/linuxbridge_agent.ini 
+    section: vxlan
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enable_vxlan", value: true }
+    - { option: "local_ip", value: "{{ internal_ip }}" }
+    - { option: "l2_population", value: true }
+  notify:
+  - restart neutron-services
+
+- name: configure the Linux bridge agent. securitygroup section
+  ini_file:
+    path: /etc/neutron/plugins/ml2/linuxbridge_agent.ini 
+    section: securitygroup
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "enable_security_group", value: true }
+    - { option: "firewall_driver", value: neutron.agent.linux.iptables_firewall.IptablesFirewallDriver }
+  notify:
+  - restart neutron-services
+
+# Needed when /proc/sys/net/bridge is missing
+- name: load br_netfilter kernel module
+  modprobe:
+    name: br_netfilter
+    state: present
+    
+- name: set net.bridge.bridge-nf-call-iptables
+  sysctl:
+    name: net.bridge.bridge-nf-call-iptables
+    value: 1
+    reload: yes
+
+- name: set net.bridge.bridge-nf-call-ip6tables
+  sysctl:
+    name: net.bridge.bridge-nf-call-ip6tables
+    value: 1
+    reload: yes
+
+- name: configure the layer 3 agent
+  ini_file:
+    path: /etc/neutron/l3_agent.ini
+    section: DEFAULT
+    option: "interface_driver"
+    value: linuxbridge
+  notify:
+  - restart neutron-services
+    
+- name: configure the DHCP agent
+  ini_file:
+    path: /etc/neutron/dhcp_agent.ini
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "interface_driver", value: linuxbridge }
+    - { option: "dhcp_driver", value: neutron.agent.linux.dhcp.Dnsmasq }
+    - { option: "enable_isolated_metadata", value: true }
+  notify:
+  - restart neutron-services
+
+- name: configure the metadata agent
+  ini_file:
+    path: /etc/neutron/metadata_agent.ini
+    section: DEFAULT
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "nova_metadata_host", value: "{{ controller_fqdn }}" }
+    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify:
+  - restart neutron-services
 
 - name: ensure neutron db is initialized
   command: neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini upgrade head
   notify:
-    - restart neutron-server
-
-- name: ensure neutron sqlite is deleted
-  file: dest=/var/lib/neutron/neutron.sqlite state=absent
-
+    - restart neutron-services
