--- a/roles/novacompute/tasks/main.yml
+++ b/roles/novacompute/tasks/main.yml
@@ -107,3 +107,21 @@
   notify: 
   - restart nova-compute
 
+- name: configure neutron section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: neutron
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: neutron}
+    - { option: "password", value: "{{ neutron_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }
+    - { option: "region_name", value: "{{ region }}" }
+  notify:
+  - restart nova-compute
