--- a/roles/novaserver/tasks/main.yml
+++ b/roles/novaserver/tasks/main.yml
@@ -119,6 +119,26 @@
   notify: 
   - restart nova-services
 
+- name: configure neutron section
+  ini_file:
+    path: /etc/nova/nova.conf
+    section: neutron
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+  loop:
+    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
+    - { option: "auth_type", value: password }
+    - { option: "project_domain_name", value: Default}
+    - { option: "user_domain_name", value: Default}
+    - { option: "project_name", value: service}
+    - { option: "username", value: neutron}
+    - { option: "password", value: "{{ neutron_identity_password }}" }
+    - { option: "region", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }
+    - { option: "metadata_proxy_shared_secret", value: "{{ shared_secret }}" }
+  notify: 
+  - restart nova-services
+
 - name: populate nova-api db
   command: /usr/bin/nova-manage api_db sync
 
