horizon: update play
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/roles/horizon/handlers/main.yml
+++ b/roles/horizon/handlers/main.yml
@@ -1,8 +1,5 @@
 - name: restart web services
   service: name={{ item }} state=restarted
   with_items:
-    - nginx
+    - apache2
     - memcached
-
-- name: restart uwsgi
-  service: name=uwsgi state=restarted
