cinder: update play
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/roles/cinderserver/handlers/main.yml
+++ b/roles/cinderserver/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: restart cinder services
+- name: restart cinder-services
   service: name={{ item }} state=restarted
   with_items:
     - cinder-api
