--- a/roles/novaserver/handlers/main.yml
+++ b/roles/novaserver/handlers/main.yml
@@ -1,5 +1,5 @@
 - name: restart nova-services
-  service: name={{ item }} state=restarted
+  service: name={{ item }} state=restarted enabled=yes
   loop:
     - nova-api
     - nova-scheduler
