neutron: add service_token_roles_required option to keystone section
Signed-off-by: Alberto Molina Coballes <alb.molina@gmail.com>

--- a/roles/neutronserver/tasks/main.yml
+++ b/roles/neutronserver/tasks/main.yml
@@ -52,7 +52,8 @@
     - { option: "username", value: neutron}
     - { option: "password", value: "{{ neutron_identity_password }}" }
     - { option: "region", value: "{{ region }}" }    
-    - { option: "region_name", value: "{{ region }}" }    
+    - { option: "region_name", value: "{{ region }}" }
+    - { option: "service_token_roles_required", value: true }
   notify: 
   - restart neutron-services
 
